# threadHook

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ysydhc/threadhook/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tencent/threadhook/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
threadhook/: build.gradle.kts
threadhook/src/main/cpp/: CMakeLists.txt  hook.cpp  thread_compressor.h  thread_hook.cpp  thread_hook.h  thread_stack_compressed.cpp
threadhook/src/main/java/com/ysydhc/threadhook/: SDK.kt  StackPrinter.java  StackSizeUtil.java  ThreadHook.java  ThreadInfoPrinter.kt  ThreadSizeCallback.java
threadhook/src/test/java/com/ysydhc/threadhook/: ExampleUnitTest.kt
